--- a/src/popup.css
+++ b/src/popup.css
@@ -1,11 +1,11 @@
 html,
 body {
-  width: 1000px;
-  height: 400px;
-  padding: 0;
+  width: 600px;
+  height: 800px;
+  padding: 10px 20px;
   margin: 0;
 }
 
 body {
-  background-color: rgb(247, 246, 246);
+  background-color: rgb(253, 250, 250);
 }
