--- a/src/popup.css
+++ b/src/popup.css
@@ -1,11 +1,11 @@
 html,
 body {
-  width: 600px;
+  width: 1000px;
   height: 800px;
-  padding: 10px 20px;
-  margin: 0;
+  /* padding: 10px 20px; */
+  margin: 8px;
 }
 
 body {
-  background-color: rgb(253, 250, 250);
+  background-color: #ffffffff;
 }
